Adding SelectionSort and implementing Merge
Adding SelectionSort and implementing Merge

--- a/src/Algos/Algos.csproj
+++ b/src/Algos/Algos.csproj
@@ -47,5 +47,8 @@
     <Compile Include="BubbleSort.cs" />
     <Compile Include="QuickSort.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Algos.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
