--- a/src/Algos/Algos.csproj
+++ b/src/Algos/Algos.csproj
@@ -40,12 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SortingTemplate.cs" />
     <Compile Include="InsertionSort.cs" />
     <Compile Include="Helper.cs" />
     <Compile Include="MergeSort.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BubbleSort.cs" />
     <Compile Include="QuickSort.cs" />
+    <Compile Include="HeapSort.cs" />
+    <Compile Include="SelectionSort.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Algos.txt" />
