Added BucketSort class

--- a/src/Algos/Algos.csproj
+++ b/src/Algos/Algos.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BucketSort.cs" />
     <Compile Include="SortingTemplate.cs" />
     <Compile Include="InsertionSort.cs" />
     <Compile Include="Helper.cs" />
