--- a/src/Algos/Algos.csproj
+++ b/src/Algos/Algos.csproj
@@ -41,6 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BucketSort.cs" />
+    <Compile Include="Search\BinarySearch.cs" />
+    <Compile Include="Search\Template.cs" />
+    <Compile Include="Search\LinearSearch.cs" />
     <Compile Include="SortingTemplate.cs" />
     <Compile Include="InsertionSort.cs" />
     <Compile Include="Helper.cs" />
