--- a/src/Algos/Algos.csproj
+++ b/src/Algos/Algos.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Array\ArrayProblems.cs" />
     <Compile Include="BucketSort.cs" />
+    <Compile Include="Hashing\HashingProblems.cs" />
     <Compile Include="Search\BinarySearch.cs" />
     <Compile Include="Search\Template.cs" />
     <Compile Include="Search\LinearSearch.cs" />
@@ -57,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Algos.txt" />
+    <Content Include="Hashing\Hashing.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
